--- a/survey-walkthru/src/index.css
+++ b/survey-walkthru/src/index.css
@@ -1,1 +1,18 @@
 /* TODO Add site wide styles */
+.inventory-question {
+    display: flex;
+    flex-direction: row;
+    margin: 12px;
+    max-width: 650px;
+}
+.inventory-prompt {
+    flex: 1 1 100%
+}
+
+.inventory-select {
+    flex: 0 0 120px;
+    margin-left: 12px;
+}
+.form-buttons {
+    margin: 12px 0;
+}
